[gd_scene load_steps=29 format=3 uid="uid://dxerux3cher11"]

[ext_resource type="Texture2D" uid="uid://8v43rgi844m1" path="res://assets/sprites/Enemies/Alien2.png" id="1_1vmdg"]
[ext_resource type="Script" path="res://scenes/alien1/alien1.gd" id="1_3hgm0"]
[ext_resource type="PackedScene" uid="uid://cfsmgnec2vx2t" path="res://scenes/shot/shot.tscn" id="2_6g68g"]
[ext_resource type="Texture2D" uid="uid://c7fmwrnleicfr" path="res://assets/sprites/Enemies/Alien2_death.png" id="3_jv88v"]
[ext_resource type="Texture2D" uid="uid://y4bclix0wfay" path="res://assets/sprites/Enemies/Alien2_attack.png" id="5_k7ccl"]

[sub_resource type="Animation" id="Animation_dxhjn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ywcgk"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_6jmsv"]
resource_name = "death"

[sub_resource type="Animation" id="Animation_652fa"]
resource_name = "hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="Animation" id="Animation_xny08"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_ypj3r"]
resource_name = "jumping"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_i4h7u"]
resource_name = "running"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pye0g"]
_data = {
"RESET": SubResource("Animation_dxhjn"),
"attack": SubResource("Animation_ywcgk"),
"death": SubResource("Animation_6jmsv"),
"hurt": SubResource("Animation_652fa"),
"idle": SubResource("Animation_xny08"),
"jumping": SubResource("Animation_ypj3r"),
"running": SubResource("Animation_i4h7u")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_stjj5"]
size = Vector2(11, 18)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cjelg"]
radius = 8.0
height = 22.0

[sub_resource type="AtlasTexture" id="AtlasTexture_id46v"]
atlas = ExtResource("3_jv88v")
region = Rect2(0, 0, 50, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmy43"]
atlas = ExtResource("3_jv88v")
region = Rect2(50, 0, 50, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubxsh"]
atlas = ExtResource("3_jv88v")
region = Rect2(100, 0, 50, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_h805r"]
atlas = ExtResource("3_jv88v")
region = Rect2(150, 0, 50, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v6aq"]
atlas = ExtResource("3_jv88v")
region = Rect2(200, 0, 50, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_0i5q6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_id46v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmy43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubxsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h805r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v6aq")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_g1pfk"]
atlas = ExtResource("5_k7ccl")
region = Rect2(0, 0, 48, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_eii8x"]
atlas = ExtResource("5_k7ccl")
region = Rect2(48, 0, 48, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoaqw"]
atlas = ExtResource("5_k7ccl")
region = Rect2(96, 0, 48, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7cvd"]
atlas = ExtResource("5_k7ccl")
region = Rect2(144, 0, 48, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0gje"]
atlas = ExtResource("5_k7ccl")
region = Rect2(192, 0, 48, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_isa3x"]
atlas = ExtResource("5_k7ccl")
region = Rect2(240, 0, 48, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_la13a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1pfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eii8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoaqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7cvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0gje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isa3x")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[node name="Alien1" type="CharacterBody2D"]
script = ExtResource("1_3hgm0")
fire = ExtResource("2_6g68g")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_1vmdg")
hframes = 6
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_pye0g")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_stjj5")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_cjelg")

[node name="WallDetection" type="RayCast2D" parent="."]
position = Vector2(0, 4)
target_position = Vector2(8, -1)

[node name="FloorDetection" type="RayCast2D" parent="."]
position = Vector2(9, 4)
target_position = Vector2(0, 11)

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="DeathSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, 4)
sprite_frames = SubResource("SpriteFrames_0i5q6")

[node name="Shoot" type="Marker2D" parent="."]
position = Vector2(-3, 4)

[node name="Direction" type="Marker2D" parent="Shoot"]
position = Vector2(20, 0)

[node name="AnimationShootTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="AttackSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, 2)
sprite_frames = SubResource("SpriteFrames_la13a")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
[connection signal="animation_finished" from="DeathSprite" to="." method="_on_death_sprite_animation_finished"]
[connection signal="timeout" from="AnimationShootTimer" to="." method="_on_animation_shoot_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="animation_finished" from="AttackSprite" to="." method="_on_attack_sprite_animation_finished"]
